<resources>
    <string name="app_name">AlexTarasyukKeepSolid</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello!</string>
    <string name="checkBoxName">Разрешить</string>
    <string name="buttonClear">Очистить</string>
    <string name="buttonSend">Отправить</string>
    <string name="editText">Введите электронную почту</string>
    <string name="hint">Введите email адрес </string>
    <string name="textViewSeconActivity"> Текст с первого интента</string>
    <string name="buttonApprove"> Подтвердить</string>
    <string name="buttonReject">Отклонить </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_rejected_adress">Пользователь отклонил адрес</string>
    <string name="clean" />
    <string name="fragm_text">StartPage</string>
    <string name="frag_reject">PageReject</string>
    <string name="frag_approve">PageApprove</string>

</resources>
